--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Alba & Álvaro"
     />
+
+    <!-- Open Graph meta tags for social media previews -->
+    <meta property="og:title" content="Alba & Álvaro" />
+    <meta property="og:description" content="Alba & Álvaro" />
+    <meta property="og:image" content="https://albahniuk.github.io/wedding-village/logo512.png" />
+    <meta property="og:url" content="https://albahniuk.github.io/wedding-village" />
+    <meta property="og:type" content="website" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
